--- a/styles/main.css
+++ b/styles/main.css
@@ -2,9 +2,10 @@
 header {
   background-color: #b20000;
   text-align: center;
+  color: ;
   border-style: inset;
   border-width: thick;
-  border-color: black;
+  border-color: #B22222;
   border-radius: 25px;
 }
 
@@ -14,6 +15,7 @@ body {
 
 h1 {
   font-family: arial;
+
 }
 
 p {
