--- a/styles/main.css
+++ b/styles/main.css
@@ -1,16 +1,19 @@
 
 header {
   background-color: #b20000;
+  margin: auto;
+  width: 60%;
   text-align: center;
   color: ;
   border-style: inset;
-  border-width: thick;
+  border-width: 10px;
   border-color: #B22222;
   border-radius: 25px;
 }
 
 body {
   background-color: #990000;
+  text-align: center;
 }
 
 h1 {
@@ -20,14 +23,42 @@ h1 {
 
 p {
   font-family: arial;
+  margin:auto;
+  width: 40%;
+  background-color: orange;
 }
+
+
 
 .blog {
   font-family: cursive;
+  margin: auto;
+  width: 50%;
   background-color: #999;
   padding: 5px;
   border-style: solid;
   border-width: thin;;
   border-color: black;
   border-radius: 25px;
+}
+
+.blog-nav {
+  font-family: cursive;
+  margin: auto;
+  width: 30%;
+  background-color: #999;
+  padding: 5px;
+  border-style: solid;
+  border-width: thin;;
+  border-color: black;
+  border-radius: 25px;
+}
+
+.img-circular {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
 }
