--- a/styles/main.css
+++ b/styles/main.css
@@ -44,8 +44,8 @@ ul {
   font-family: cursive;
   margin: auto;
   width: 50%;
-  background-color: #999;
-  padding: 5px;
+  background-color: rgba(192, 192, 192, 0.9);
+  padding: 25px;
   border-style: solid;
   border-width: thin;;
   border-color: black;
