--- a/styles/main.css
+++ b/styles/main.css
@@ -56,7 +56,7 @@ ul {
   font-family: cursive;
   margin: auto;
   width: 30%;
-  background-color: #999;
+  background-color: rgba(192, 192, 192, 0.9);
   padding: 5px;
   border-style: solid;
   border-width: thin;;
