--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,10 @@
 
-header {
+* {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+h1 {
   background-color: #b20000;
   margin: auto;
   width: 60%;
@@ -37,6 +42,69 @@ ul {
   width: 60%;
   padding: 5px;
   background-color: orange;
+}
+
+header {
+  margin-top:25px;
+}
+
+nav {
+  margin-top: 20px;
+  margin-bottom: 100px;
+  position: fixed;
+
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+nav li {
+    float: left;
+    display: inline-block;
+
+}
+
+nav li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav li a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+}
+
+nav li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 
