--- a/styles/main.css
+++ b/styles/main.css
@@ -17,8 +17,7 @@ h1 {
 }
 
 body {
-  /*background-color: #990000;*/
-  background-image: url("http://2.bp.blogspot.com/-pATX0YgNSFs/VP-82AQKcuI/AAAAAAAALSU/Vet9e7Qsjjw/s1600/Cat-hd-wallpapers.jpg");
+  background-color: black;
   text-align: center;
   background-attachment: fixed;
 }
