--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,6 @@
+@media (min-width: 400px) {
+
+
 nav {
   width: 100%;
   position: fixed;
@@ -59,6 +62,34 @@ nav li.dropdown {
     display: block;
 }
 
+/*
+.blogdrop-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.blogdrop-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+*/
+
+
 .blogdrop {
   background-color: #D3D3D3;
+}
+
+/*
+.blogdrop:hover .blogdrop-content {
+  display: block;
+}
+
+*/
+
 }
