--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,30 @@
 
+body {
+  background-color: #f2f2f2;
+}
+
+h1 {
+  text-align: right;
+}
+
 header {
-  margin-top: 70px;
+  width: ;
+  margin-top: 60px;
+  margin-bottom: 50px;
+  padding: 20px;
+  padding-top: 30px;
+  background-color: #a9a9a9;
+}
+
+footer {
+  text-align: right;
+  padding-top: 10px;
+  padding-bottom: 0px;
+  background-color: #ebebeb;
 }
 
 nav {
+  width: ;
   position: fixed;
   top: 0;
 }
@@ -89,3 +110,36 @@ nav li.dropdown {
 }
 
 */
+
+.img-circular {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+
+.blog-recent {
+  margin-top: 20px;
+}
+
+.blog-hide-550 {
+  display: none;
+}
+
+.blog-hide-1000 {
+  display: none;
+}
+
+@media (min-width: 550px) {
+  .blog-hide-550 {
+    display: block;
+  }
+}
+
+@media (min-width: 1000px) {
+  .blog-hide-1000 {
+    display: block;
+  }
+}
