--- a/styles/main.css
+++ b/styles/main.css
@@ -11,12 +11,15 @@ h4 {
    border-bottom: dotted black;
 }
 
+h6 {
+  text-align: right;
+}
+
 header {
   width: ;
   margin-top: 60px;
   margin-bottom: 50px;
-  padding: 20px;
-  padding-top: 30px;
+  padding-right: 20px;
   background-color: #a9a9a9;
 }
 
