--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,10 @@ h1 {
   text-align: right;
 }
 
+h3 {
+  margin-bottom: 30px;
+}
+
 h4 {
    border-bottom: dotted black;
 }
@@ -24,14 +28,51 @@ header {
 }
 
 footer {
-  text-align: right;
+  text-align: left;
+  margin-top: 50px;
   padding-top: 10px;
   padding-bottom: 0px;
   background-color: #ebebeb;
 }
 
+.fixed {
+  position: fixed;
+  right: 0;
+  margin-right: 10%;
+}
+
+.blog-link {
+  margin-right: 5px;
+}
+
+.blog-link-text {
+  font-size: 2em;
+  margin: 20px;
+}
+
+.blog-link-flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.box {
+  color: grey;
+  font-size: 100px;
+  text-align: center;
+  text-decoration: none;
+  background: #d6d6d6;
+  margin: 10px;
+  border-radius: 5%;
+}
+
+.blog-link-flex a {
+  padding-top: 6%;
+  font-size: 10px;
+  color: black;
+}
 nav {
-  width: ;
   position: fixed;
   top: 0;
 }
@@ -58,29 +99,10 @@ nav li a, .dropbtn {
     text-decoration: none;
 }
 
-nav li a:hover, .dropdown:hover .dropbtn {
+nav li a:hover, .dropdown:hover .drop{
     background-color: red;
 }
 
-nav li.dropdown {
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
 
 .dropdown-content a:hover {background-color: #f1f1f1}
 
@@ -88,47 +110,31 @@ nav li.dropdown {
     display: block;
 }
 
-/*
-.blogdrop-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-.blogdrop-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-*/
-
-
-.blogdrop {
-  background-color: #D3D3D3;
-}
-
-/*
-.blogdrop:hover .blogdrop-content {
-  display: block;
-}
-
-*/
 
 .img-circular {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 200px;
-  height: 200px;
+  width: 50%;
+  height: 50%;
   border-radius: 50%;
+}
+
+.blog-pic {
+  height: 175px;
+  width: 175px;
+  border-radius: 50%;
+
+}
+
+.flex {
+  display: flex;
 }
 
 .recent1 {
   padding-right: 40px;
+}
+
+.blog {
+  padding-right: 50px;
 }
 
 .blog-recent {
